      multiple regions
    - added some opcode aliases, like loopmode for loop_mode, to be
      more compatible
    - added support for trigger=release and rt_decay
    - added support for off_mode=normal
    - added support for random, seq_position, seq_length and volume
    - added v1 LFO opcodes to parser (no support in engine yet)

  * SoundFont format engine:
    - Initial implementation (not usable yet)

  * Host plugins:
    - AU bugfix: failed to destroy its audio/MIDI devices
    - Listen to all interfaces on Mac OS X (INADDR_ANY)
    - VST bugfix: If the host called resume() before and after
      changing sample rate or block size, the number of channels was
      incorrectly set to two. This caused silence in Cubase 5.

  * MIDI driver:
    - ALSA MIDI driver supports now "NAME" device parameter, for overriding
      the ALSA sequencer client name

  * LSCP server:
    - added support for sending MIDI CC messages via LSCP command
      "SEND CHANNEL MIDI_DATA CC <sampler-chan> <ctrl> <val>"

  * Bug fixes:
    - Fixed crash which may occur when MIDI key + transpose is out of range

Version 1.0.0 (31 July 2009)

  * packaging changes:
    - autoconf bugfix: the PKG_CONFIG variable wasn't initialized properly,
      causing e.g. the libgig test to fail when
      "./configure --disable-jack-driver" was used
      (patch by Alexis Ballier)
    - fixed compilation with gcc 4.3
    - fixes for building on OS X (thanks to Ebrahim Mayat for testing)
    - fixed configure so it detects x86_64 (#107)
    - fixes for building with newer MinGW versions
    - fix for building with bison 2.4 (#111)
    - fixed building with libgig installed in a non-standard directory
    - minor fix in configure for mmsystem.h detection on MinGW
    - Windows: look for editor plugins and Fantasia using base
      directory of liblinuxsampler dll (look in the same directory and one
      directory above)
    - configure script fix: removed unconditional use of SSE